2002-02-26  Gediminas Paulauskas <menesis@delfi.lt>

	* configure.in: fix libxml2 checks, add iconv and glib checks.
	* src/boards/Makefile.am, src/gcompris/Makefile.am: use correct XML_LIBS,
	added XML_CFLAGS to INCLUDES.

2002-02-26  Gediminas Paulauskas <menesis@delfi.lt>

	* macros, intl: removed from CVS, use more up-to-date ones from
	gnome-common (use "cvs checkout gcompris" to get them again, update
	won't work).
	* intltool-*.in, ABOUT-NLS, aclocal.m4, config.h.in, ltmain.sh:
	remove files from CVS, they are created by autogen.sh

2002-02-24  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/boards/draw.c: New cursors. Now lines can be moved in all directions.
	* src/gcompris/gcompris.c: Added cursors for draw board
	* src/gcompris/cursor.[ch]: Added cursors for draw board
	* boards/sounds/en/*: cleanup, removed sounds that are in french

2002-02-23 Pascal Georges <pascal.georges1@free.fr>
	* src/gcompris/gcompris.c: modified gcompris_set_cursor to use custom cursors. A big red arrow is the default,
	  a red bird is for the moment only used for algebra_guesscount
	* src/gcompris/cursor.[ch] : definitions and handling of custom cursors

2002-02-23  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/boards/draw.c: New draw completed including new icons and cursors
	* src/gcompris/gcompris.c: Added gcompris_set_cursor in the gcompris API

2002-02-22 Pascal Georges <pascal.georges1@free.fr>

	* src/gcompris/bar.c : bar_play_sound is played only if no other sound is played or pending

2002-02-21 Pascal Georges <pascal.georges1@free.fr>

	* src/gcompris/soundutil.[ch] : changed the way ogg sounds are played. Several policies are implemented,
	  but only the currently used (PLAY_AFTER_CURRENT) has been tested (very quickly tested).

2002-02-19  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/boards/draw.c: anchor improved. New fill tool added (replace old move tool)

2002-02-17  Bruno Coudoin  <bruno.coudoin@free.fr>
